k8-config-local-cluster/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # this is for logging / debugging
  name: redis-deployment
spec:
  # how many instances
  replicas: 1
  # this matches the pod label
  selector:
    matchLabels:
      component: redis
  # this describes the pod definition
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
