k8-config-local-cluster/cluster-ip-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip
spec:
  type: ClusterIP
  ports:
    # other objects can reach via this port
    - port: 6379
      # this is the exposeed port within the object / container
      targetPort: 6379
  selector:
    component: redis
