k8-config-local-cluster/cluster-ip-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: web
