k8-config-local-cluster/ps-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: ps-node-port
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31111
  selector:
    component: postgres
