k8-config-local-cluster/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-cluster-ip
              servicePort: 3000
          - path: /graphql
            backend:
              serviceName: api-cluster-ip
              servicePort: 4000
          - path: /refresh_token
            backend:
              serviceName: api-cluster-ip
              servicePort: 4000
